# godmode

./: .env.example  AI_INTEGRATION_ANALYSIS.md  COMPREHENSIVE_PROJECT_ANALYSIS.md  GodModeApp.swift  Makefile  README.md  REAL_AI_SETUP.md  SETUP_GUIDE.md  demo_godmode.py  godmode_cli.py  godmode_cli_simple.py  godmode_summary.py  godmode_with_openrouter.py  hrm_deep_dive.py  install_godmode.py  main.py  pyproject.toml  requirements.txt  setup.py  test_godmode_basic.py  test_godmode_intelligence.py  test_payload.json
.cursor/rules/: god.mdc
examples/: demo.py
godmode/: __init__.py  api.py  cli.py  engine.py  ladder_generator.py  models.py  ontology.py  pyproject.toml  requirements.txt  schemas.py  validator.py
godmode.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
godmode/core/: __init__.py  conversation_predictor.py  conversation_predictor_broken.py  engine.py  memory.py  system_analyzer.py  validation.py
godmode/core/ontology/: __init__.py  extractor.py  graph.py  manager.py
godmode/core/reasoning/: __init__.py  backward.py  cognitive_moves.py  forward.py  scoring.py
godmode/experimental/: __init__.py  hierarchical_reasoning.py
godmode/integrations/: __init__.py  model_selector.py  openrouter.py
godmode/models/: __init__.py  commands.py  core.py  responses.py
godmode/schemas/: __init__.py  schemas.py  validator.py
godmode/tests/: __init__.py  mocks.py
godmode/tests/integration/: __init__.py  test_end_to_end.py
godmode/tests/unit/: __init__.py  test_backward_reasoning.py  test_core_models.py  test_forward_reasoning.py  test_validation.py
godmode/web/: __init__.py  api.py  app.py  websocket.py
templates/: analytics.html  demo.html  home.html  system.html  visualization.html
tests/: test_engine.py
