[tool.poetry]
name = "godmode"
version = "0.1.0"
description = "GODMODE - A superhuman, ontological Question Foresight Engine"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.0"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
numpy = "^1.24.0"
networkx = "^3.2.1"
neo4j = "^5.14.1"
openai = "^1.3.0"
anthropic = "^0.7.0"
voyageai = "^0.2.0"
redis = "^5.0.1"
asyncio-mqtt = "^0.13.0"
python-dotenv = "^1.0.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true